# Dorna

./: CLAUDE.md  HANDOFF.md
backend/: .env  .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Makefile  Newstopics.csv  README.md  alembic.ini  branch_analysis.md  news_layer_migration_prompt.md  pyproject.toml
backend/alembic/: README.md  env.py
backend/alembic/versions/: 2026_06_17_1839-5133a004f071_drop_redundant_duplicate_indexes.py  2026_06_17_1850-b2a7f3c19d40_align_constraint_names_to_convention.py  2026_06_20_1200-f1a9b3c7d2e4_phrase_library.py  2026_06_20_1300-c2d4e6f8a0b1_user_stats.py  2026_06_20_1400-d4e6f8a0b1c2_daily_briefs.py  2026_06_20_1500-e6f8a0b1c2d3_device_tokens.py  2026_06_20_1600-f8a0b1c2d3e4_calendar.py  2026_06_20_1700-a0b1c2d3e4f5_conversation.py  aaed617c4069_initial_baseline.py
backend/app/: main.py
backend/app/api/: deps.py  system.py
backend/app/core/: ai.py  auth_deps.py  config.py  database.py  rate_limit.py  security.py
backend/app/files/: sbody-tracker-beba7-074bea142d20.json.j2
backend/app/models/: __init__.py  calendar.py  conversation.py  daily_brief.py  device_token.py  feed_item.py  grammar_corrections.py  grammar_suggestions.py  learning_insights.py  news.py  phrase.py  podcast_job.py  task_images.py  tasks.py  token_usage_daily.py  tone_adjustments.py  topic_article.py  topic_podcast_script.py  translate_texts.py  user.py  user_preferences.py  user_saved_phrase.py  user_stats.py  user_topic_feedback.py
backend/app/schemas/: assistant.py  auth.py  base.py  calendar.py  conversation.py  daily_brief.py  news.py  notifications.py  onboarding.py  phrase.py  podcast.py  stats.py  track.py  tts.py  tts_images.py  users.py
backend/app/scripts/: analyze_asgari_real.py  backfill_token_costs.py  batch_test_polish.py  dry_run_analysis.py  find_user.py  list_unique_users.py  send_email_detailed.py  send_mahnaz_direct.py  send_mahnaz_email.py  send_premier_email.py  show_both_outputs.py  sync_news_topics_csv.py  (+2 more)
backend/scripts/: gateway_smoke_test.py  refresh_active_articles.sh  seed_topics.sh
backend/tests/: conftest.py  test_ai_facade.py  test_assistant_endpoints.py  test_assistant_service.py  test_brevo_email.py  test_calendar_endpoints.py  test_conversation_endpoints.py  test_daily_brief_endpoints.py  test_gemini_retry.py  test_grammar.py  test_grounded_agent.py  test_notifications_endpoints.py  test_onboarding_endpoints.py  test_phrase_endpoints.py  test_podcast_preferences_endpoints.py  test_stats_endpoints.py  test_tts_images_endpoints.py  test_usage.py
(+427 files in other folders)
