[project]
name = "dorna-fastapi"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Ali MZ", email = "alimz.1993@gmail.com" }]

dependencies = [
  "fastapi~=0.116.1",
  "sqlalchemy~=2.0.42",
  "uvicorn~=0.35.0",
  "pydantic~=2.11.7",
  "pydantic-settings~=2.10.1",
  "python-dotenv~=1.1.1",
  "httpx~=0.28.1",
  "asyncpg~=0.30.0",
  "greenlet~=3.2.4",
  "google-genai (>=1.33.0,<2.0.0)",
  "python-multipart (>=0.0.20,<0.0.21)",
  "celery[redis] (>=5.5.3,<6.0.0)",
  "google-cloud-texttospeech (>=2.33.0,<3.0.0)",
  "flower (>=2.0.1,<3.0.0)",
  "pyjwt (>=2.10.1,<3.0.0)",
  "argon2-cffi (>=25.1.0,<26.0.0)",
  "email-validator (>=2.2,<3.0)",
  "pillow (>=10.4,<11.0)",
  "brevo-python (>=1.1,<2.0)",
  "google-auth (>=2.35,<3.0)",
  "cryptography (>=46.0.3,<47.0.0)",
  "jinja2 (>=3.1.6,<4.0.0)",
  "diff-match-patch ==20241021",
  "alembic (>=1.18.4,<2.0.0)",
]

[tool.poetry.group.dev.dependencies]
pytest = "~=8.4.1"
pytest-asyncio = "~=1.1.0"
pytest-cov = "~=6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
