[project]
name = "dorna-fastapi"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14,<4.0"
authors = [{ name = "Ali MZ", email = "alimz.1993@gmail.com" }]

dependencies = [
  "fastapi>=0.137.1,<1.0.0",
  "sqlalchemy>=2.0.51,<3.0.0",
  "uvicorn>=0.49.0,<1.0.0",
  "pydantic>=2.13.4,<3.0.0",
  "pydantic-settings>=2.14.1,<3.0.0",
  "python-dotenv>=1.2.2,<2.0.0",
  "httpx>=0.28.1,<1.0.0",
  "asyncpg>=0.31.0,<1.0.0",
  "greenlet>=3.5.1,<4.0.0",
  "google-genai>=2.8.0,<3.0.0",
  "python-multipart>=0.0.32,<1.0.0",
  "celery[redis]>=5.6.3,<6.0.0",
  "google-cloud-texttospeech>=2.36.0,<3.0.0",
  "flower>=2.0.1,<3.0.0",
  "pyjwt>=2.13.0,<3.0.0",
  "argon2-cffi>=25.1.0,<26.0.0",
  "email-validator>=2.3.0,<3.0.0",
  "pillow>=12.2.0,<13.0.0",
  "brevo-python>=4.0.10,<5.0.0",
  "google-auth>=2.55.0,<3.0.0",
  "cryptography>=49.0.0,<50.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "diff-match-patch>=20241021",
  "alembic>=1.18.4,<2.0.0",
  "tenacity>=9.1.4,<10.0.0",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=9.1.0,<10.0.0"
pytest-asyncio = ">=1.4.0,<2.0.0"
pytest-cov = ">=7.1.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.4.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
